add script backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "prettier:check": "prettier --check \"src/**/*.js\"",
     "prettier:format": "prettier --write \"src/**/*.js\"",
     "lint": "eslint \"src/**/*.js\" --fix",
-    "lint:check": "eslint \"src/**/*.js\""
+    "lint:check": "eslint \"src/**/*.js\"",
+    "vercel-build": "prisma generate"
   },
   "author": "rusdaii",
   "license": "ISC",
