--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "postcss": "^8",
+    "tailwind-merge": "^2.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
