--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,6 @@ DATABASE_URL="mongodb+srv://<USERNAME>:<PASSWORD>@<HOST>/<DB_NAME>?retryWrites=t
 ACCESS_TOKEN_SECRET_KEY=<YOUR_SECRET_KEY>
 
 # CLOUDINARY
-CLOUDINARY_CLOUD_NAME=dxqil5iuv
-CLOUDINARY_API_KEY=487158528783832
-CLOUDINARY_API_SECRET=04I5lG1CVah8YtO6pZDMJE8DxUM
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
