--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "image-sharing-app",
+  "name": "Snapster",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,15 +10,23 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.12.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "cookies-next": "^4.1.0",
     "moment": "^2.29.4",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.2",
-    "react-toastify": "^9.1.3"
+    "react-hook-form": "^7.50.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.12.1",
@@ -26,7 +34,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "daisyui": "^4.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "eslint-plugin-import": "^2.29.0",
@@ -34,7 +41,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "postcss": "^8",
-    "tailwind-merge": "^2.1.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
