--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -13,7 +13,7 @@
     }
   },
   "rules": {
-    "jsx-quotes": ["error", "prefer-double"],
+    "react/prop-types": [2, { "ignore": ["className"] }],
     "semi": ["error", "always"],
     "no-unused-vars": [
       "error",
